--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="map">
-	<script type="text/javascript" src="webmap.js"></script>	
+	<script type="text/javascript" src="web-map.js"></script>	
 	</div>
 </body>
 </html>
